[gd_scene load_steps=34 format=2]

[ext_resource path="res://Player/Witch Design 3.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerShadow.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Overlaps/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/GunController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/PlayerStats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlaps/PlayerCollectBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/MagicAbilityController.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 10.7856

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.55789
height = 10.9967

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.3237
height = 23.602

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 16 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 8 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 24 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 0, -1 )

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 553, 128 )
states/Walk/node = SubResource( 21 )
states/Walk/position = Vector2( 745, 117 )
transitions = [ "Idle", "Walk", SubResource( 22 ), "Walk", "Idle", SubResource( 23 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0.1316, -7.75253 )
collision_layer = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0.701317, -5.92983 )
texture = ExtResource( 2 )

[node name="MagicAbilityController" parent="." instance=ExtResource( 8 )]
position = Vector2( 0.436447, -26.8681 )

[node name="AnimatedSprite" parent="MagicAbilityController/MagicCaster" index="0"]
frame = 1

[node name="GunController" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.436447, -27.1461 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.436447, -28.1461 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4
frame = 24

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.311447, -5.1461 )
shape = SubResource( 1 )

[node name="CollisionOverlaps" type="Node2D" parent="."]
position = Vector2( 0.436447, -28.1461 )

[node name="HurtBox" parent="CollisionOverlaps" instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 0

[node name="Collision" parent="CollisionOverlaps/HurtBox" index="0"]
position = Vector2( 0.115425, 20.9165 )
shape = SubResource( 2 )

[node name="PlayerCollectBox" parent="CollisionOverlaps" instance=ExtResource( 7 )]
collision_layer = 2
collision_mask = 0

[node name="Collision" parent="CollisionOverlaps/PlayerCollectBox" index="0"]
position = Vector2( 0.647568, 10.9646 )
shape = SubResource( 3 )

[node name="Animation" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
root_node = NodePath("../..")
anims/idle_down = SubResource( 4 )
anims/idle_left = SubResource( 5 )
anims/idle_right = SubResource( 6 )
anims/idle_up = SubResource( 7 )
anims/walk_down = SubResource( 8 )
anims/walk_left = SubResource( 9 )
anims/walk_right = SubResource( 10 )
anims/walk_up = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="Animation"]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )
parameters/Idle/blend_position = Vector2( 0.0124805, 0.783934 )
parameters/Walk/blend_position = Vector2( 0.00780034, -0.0517242 )

[node name="PlayerStats" parent="." instance=ExtResource( 6 )]

[connection signal="area_entered" from="CollisionOverlaps/HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="MagicAbilityController"]
[editable path="MagicAbilityController/MagicCaster"]
[editable path="MagicAbilityController/MagicCaster/GroundCastCollisionTarget"]
[editable path="CollisionOverlaps/HurtBox"]
[editable path="CollisionOverlaps/PlayerCollectBox"]
